cleanup long-lines

--- a/Keepass Protocol.ipynb
+++ b/Keepass Protocol.ipynb
@@ -40,17 +40,23 @@
     "    data = unpadder.update(padded_data)\n",
     "    return data + unpadder.finalize()\n",
     "\n",
-    "def encrypt(data, key, iv):\n",
+    "def getCipher(key, iv):\n",
     "    backend = default_backend()\n",
-    "    cipher = Cipher(algorithms.AES(base64.b64decode(key)), modes.CBC(base64.b64decode(iv)), backend)\n",
+    "    return Cipher(\n",
+    "        algorithms.AES(base64.b64decode(key)),\n",
+    "        modes.CBC(base64.b64decode(iv)),\n",
+    "        backend\n",
+    "    )\n",
+    "\n",
+    "def encrypt(data, key, iv):\n",
+    "    cipher = getCipher(key, iv)\n",
     "    encryptor = cipher.encryptor()\n",
     "    p = pad(data)\n",
     "    res = encryptor.update(p) + encryptor.finalize()\n",
     "    return base64.b64encode(res)\n",
     "    \n",
     "def decrypt(data, key, iv):\n",
-    "    backend = default_backend()\n",
-    "    cipher = Cipher(algorithms.AES(base64.b64decode(key)), modes.CBC(base64.b64decode(iv)), backend)\n",
+    "    cipher = getCipher(key, iv)\n",
     "    decryptor = cipher.decryptor()\n",
     "    padded_data = decryptor.update(base64.b64decode(data)) + decryptor.finalize()\n",
     "    return unpad(padded_data)"
